Fixed post layout bug in Firefox

--- a/www/style-rts.mac.css
+++ b/www/style-rts.mac.css
@@ -1239,6 +1239,10 @@ h1.listing + .post-meta .read-time {
 /* POSTS */
 /*********/
 
+.post {
+	max-width: 100%;
+}
+
 .post-body {
 	min-height: 8em;
 	padding: 0 30px;
